src/pages/survey/survey.scss
survey {
  .survey-title {
    color: white;
    height: 8vh;
    padding-top: 2.5vh;
  }
  .picture-container {
    .pic {
      position: absolute;
      top: 20vh;
      border: 2px $atp-light-grey2 solid;
      width: 41vw;
      height: 41vw;
      z-index: 10;
      &:first-child {
        left: 6vw;
      }
      &:last-child {
        right: 6vw;
      }
    }
  }
  .button-container {
    position: absolute;
    top: 80vw;
    left:6vw;
    width: 88vw;
    height: 80vw;

    .pic-button {
      width: 41vw;
      background-color: $atp-light-grey2;
      color: $atp-dark-text;
      text-transform: inherit;
      white-space: normal;
      &.activated {
        background-color: $atp-light-grey3;
      }
    }
    .no-opinion-button {
      color: $atp-dark-text;
      text-transform: inherit;
      margin-top: 35vh;
      width: 99%;
    }
  }
}

